--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light" style="background-color: #ffe3a9">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><img src="/public/img/icon/black_chap.png" style="height: 50px; "></a>
+    <a class="navbar-brand" href="/"><img src="/public/icon/black_chap.png" style="height: 50px; "></a>
     <!--소형창 토글 버튼-->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
