--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css">
   <script src="/webjars/bootstrap/5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/webjars/bootstrap-icons/1.10.3/font/bootstrap-icons.css">
+  <script src="https://kit.fontawesome.com/ff32a16db2.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background-color: #ffe3a9;">
 <header th:replace="/headerNav"></header>
 <main class="container">
   <th:block layout:fragment="content"></th:block>
