회원가입 영혼 갈아 넣기

--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -35,7 +35,7 @@
       <div class="d-flex">
         <i class="nav-link" href="/user/login.do">
           <!--로그인 아이디/회원가입 아이디-->
-          <a class="bi bi-person" style="font-size: 30px; margin-right: 10px;"></a>
+          <a class="bi bi-person" href="/user/login.do" style="font-size: 30px; margin-right: 10px;"></a>
         </i>
         <i class="nav-link">
           <!--로그인 아이디/회원가입 아이디-->
