--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -12,21 +12,22 @@
       <img src="/public/img/logo.png" alt="" width="350px" height="120px" style="margin-left: 5em">
     </a>
     <p class="form-floating">
-      <input id="storeId" type="text" name="userId" value="" class="form-control" placeholder="??" style="background: #FFFAED">
+      <input id="storeId" type="text" name="userId" value="" class="form-control id_input" placeholder="??" style="background: #FFFAED">
       <label class="">아이디</label>
+      <span class="id_input_re_1" style="display: none; color: #0b5ed7">사용 가능한 아이디입니다.</span>
+      <span class="id_input_re_2" style="display: none; color: #b02a37">아이디가 이미 존재합니다.</span>
     </p>
     <p class="form-floating">
-      <input id="pw" type="password" name="pw" value="" class="form-control" placeholder="??" style="background: #FFFAED">
+      <input id="pwd" type="password" name="pwd" onchange="check_pw()" class="form-control" placeholder="??" style="background: #FFFAED">
       <label>비밀번호</label>
     </p>
     <p class="form-floating">
-      <input id="pwCheck" type="password" name="check_pw" value="" class="form-control" placeholder="??" style="background: #FFFAED">
-      <label>비밀번호 확인
-      <span id="same"></span>
-      </label>
+      <input id="repwd" type="password" name="repwd" onchange="check_pw()" class="form-control" placeholder="??" style="background: #FFFAED; margin-bottom: 10px">
+      <span id="check"></span>
+      <label>비밀번호 확인</label>
     </p>
     <p class="form-floating">
-      <input id="name" type="text" name="name" value="" class="form-control" placeholder="??" style="background: #FFFAED">
+      <input id="name" type="text" name="name" value="" class="form-control" placeholder="??" style="background: #FFFAED;">
       <label>이름</label>
     </p>
     <p class="form-floating">
@@ -48,32 +49,45 @@
       </select>
       <label>성별</label>
     </p>
+    <div style="width: 20em; display: inline-block">
+      <p class="form-floating">
+        <input type="text"
+               name="addr1" id="addr1" value="" class="form-control" placeholder="??" style="background: #FFFAED">
+        <label>우편번호</label>
+      </p>
+    </div>
+    <div style="float: right; width: 33%;">
+      <button type="button" onclick="execPostCode();" class="btn btn-warning"
+              style="width: 10em; height: 3.5em; background: #FFE3A9; color: #FF5D5D;" >
+        <a style="font-size: 18px; font-weight: 800">주소 찾기</a>
+      </button>
+    </div>
     <p class="form-floating">
-      <input type="text" name="address" value="" class="form-control" placeholder="??" style="background: #FFFAED">
-      <label>주소</label>
+      <input type="text" name="addr2" id="addr2" value="" class="form-control" placeholder="??" style="background: #FFFAED">
+      <label>도로명 주소</label>
     </p>
     <p class="form-floating">
-      <input type="text" name="detailAddress" value="" class="form-control" placeholder="??" style="background: #FFFAED">
-      <label>주소상세</label>
+      <input type="text" name="addr3" id="addr3" value="" class="form-control" placeholder="??" style="background: #FFFAED">
+      <label>상세 주소</label>
     </p>
     <div style="width: 20em; display: inline-block">
       <p class="form-floating">
-        <input id="sm_email" type="text" name="sm_email" value="" class="form-control" placeholder="??" style="background: #FFFAED">
+        <input type="text" name="sm_email" value="" class="form-control" placeholder="??" style="background: #FFFAED">
         <label>이메일</label>
       </p>
     </div>
-      <div style="float: right; width: 33%;">
-        <button type="submit" class="btn btn-warning"
-                style="width: 10em; height: 3.5em; background: #FFE3A9; color: #FF5D5D;">
-          <a style="font-size: 18px; font-weight: 800">인증번호 받기</a>
-        </button>
-      </div>
-      <div>
-        <p class="form-floating">
-          <input type="text" name="email" value="" class="form-control" placeholder="??" style="background: #FFFAED">
-          <label style="">인증번호</label>
-        </p>
-      </div>
+    <div style="float: right; width: 33%;">
+      <button type="submit" class="btn btn-warning"
+              style="width: 10em; height: 3.5em; background: #FFE3A9; color: #FF5D5D;">
+        <a style="font-size: 18px; font-weight: 800">인증번호 받기</a>
+      </button>
+    </div>
+    <div>
+      <p class="form-floating">
+        <input type="text" name="email" value="" class="form-control" placeholder="??" style="background: #FFFAED">
+        <label style="">인증번호</label>
+      </p>
+    </div>
     <div>
       <p class="form-floating">
         <input type="checkbox" name="agree_all" id="agree_all">
@@ -82,11 +96,122 @@
       </p>
     </div>
     <p class="text-end">
-      <button type="button" class="btn btn-warning"
+      <button type="submit" class="btn btn-warning"
               style="width: 31.3em; height: 3.5em; background: #FFE3A9; color: #FF5D5D;">
-        <a style="font-size: 25px; font-weight: 800">회원가입</a>
+        <a style="font-size: 25px; font-weight: 800" onclick="return validatePassword()">회원가입</a>
       </button>
     </p>
   </form>
+
+
+  <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+  <script>
+    function execPostCode() {
+      new daum.Postcode({
+        oncomplete: function(data) {
+          // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+          // 도로명 주소의 노출 규칙에 따라 주소를 조합한다.
+          // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+          var fullRoadAddr = data.roadAddress; // 도로명 주소 변수
+          var extraRoadAddr = ''; // 도로명 조합형 주소 변수
+
+          // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+          // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+          if(data.bname !== '' && /[동|로]$/g.test(data.bname)){
+            extraRoadAddr += data.bname;
+          }
+          // 도로명, 지번 조합형 주소가 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+          if(extraRoadAddr !== ''){
+            extraRoadAddr = ' (' + extraRoadAddr + ')';
+          }
+          // 도로명, 지번 주소의 유무에 따라 해당 조합형 주소를 추가한다.
+          if(fullRoadAddr !== ''){
+            fullRoadAddr += extraRoadAddr;
+          }
+
+          // 우편번호와 주소 정보를 해당 필드에 넣는다.
+          console.log(data.zonecode);
+          console.log(fullRoadAddr);
+
+
+          document.querySelector("[name=addr1]").value = data.zonecode;
+          document.querySelector("[name=addr2]").value = fullRoadAddr;
+
+          /* document.getElementById('signUpUserPostNo').value = data.zonecode; //5자리 새우편번호 사용
+          document.getElementById('signUpUserCompanyAddress').value = fullRoadAddr;
+          document.getElementById('signUpUserCompanyAddressDetail').value = data.jibunAddress; */
+        }
+      }).open();
+    }
+
+    //비밀번호 일치하는지 확인(alert으로 나오게 하기)
+    // function validatePassword() {
+    //   var pwd=document.getElementById("pwd").value;
+    //   var repwd=document.getElementById("repwd").value;
+    //
+    //  if (pwd !== repwd) {
+    //    alert("패스워드가 일치하지 않습니다. 비밀번호를 확인해주세요")
+    //    return false;
+    //  }
+    //  return true
+    // }
+
+    //밑줄로 나오게 하기
+    function check_pw() {
+      var pwd=document.getElementById('pwd').value;
+      var SC=["!","@","#","$","%"];
+      var check_SC=0;
+
+      if(pwd.length < 6 || pwd.length>16){
+        window.alert('비밀번호는 6글자 이상, 16글자 이하만 이용 가능합니다.');
+        document.getElementById('pwd').value='';
+      }
+      for(var i=0;i<SC.length;i++){
+        if(pwd.indexOf(SC[i]) !== -1){
+          check_SC = 1;
+        }
+      }
+      if(check_SC === 0){
+        window.alert('!,@,#,$,% 의 특수문자가 들어가 있지 않습니다.')
+        document.getElementById('pwd').value='';
+      }
+      if(document.getElementById('pwd').value !=='' && document.getElementById('repwd').value!==''){
+        if(document.getElementById('pwd').value===document.getElementById('repwd').value){
+          document.getElementById('check').innerHTML='비밀번호가 일치합니다.'
+          document.getElementById('check').style.color='blue';
+        }
+        else{
+          document.getElementById('check').innerHTML='비밀번호가 일치하지 않습니다.';
+          document.getElementById('check').style.color='red';
+        }
+      }
+    }
+
+    document.querySelector('.id_input').addEventListener("propertychange", handleChange);
+    document.querySelector('.id_input').addEventListener("change", handleChange);
+    document.querySelector('.id_input').addEventListener("keyup", handleChange);
+    document.querySelector('.id_input').addEventListener("paste", handleChange);
+    document.querySelector('.id_input').addEventListener("input", handleChange);
+
+    function handleChange() {
+      // console.log("keyup 테스트");
+      const memberId = document.querySelector('.id_input').value; // .id_input에 입력되는 값
+      const data = { memberId: memberId }; // '컨트롤에 넘길 데이터 이름' : '데이터(.id_input에 입력되는 값)'
+
+      fetch('/member/memberIdChk', {
+        method: 'POST',
+        body: JSON.stringify(data),
+        headers: { 'Content-Type': 'application/json' },
+        success: function(result) {
+          console.log("성공 여부: " + result);
+        }
+      });
+    }
+  </script>
+
+
+  </script>
+
 </div>
 </html>
