--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -42,30 +42,35 @@
         <div style="border: 1px solid black;">
             <p>팔로워</p>
             <p>팔로잉</p>
-            <p>자기소게</p>
+            <p th:text="${user.introduce}"></p>
             <div>뱃지</div>
             <ul>
-                <li>페이스북</li>
-                <li>인스타</li>
-                <li>유튜브</li>
-                <li>공유</li>
-                <li>챱스토리</li>
+                <li>
+                    <a href="">페이스븍</a>
+                    <a href=""></a>
+                </li>
+                <li>
+                    <a href="">인스타</a>
+                    <a href=""></a>
+                </li>
+                <li>
+                    <a href="">유튜브</a>
+                    <a href=""></a>
+                </li>
+                <li>
+                    <a href="">공유</a>
+                    <a href=""></a>
+                </li>
+                <li>
+                    <a href="">찹스토리</a>
+                    <a href=""></a>
+                </li>
             </ul>
         </div>
 
-
-        <!--
-            유저 우측 정보
-            1. 팔로워/팔로잉
-            2. 유저 자기소개
-            3. 유저 등급 및 뱃지
-            4. 유저 링크
-        -->
-
         </section>
 
-        <!--ajax 정보 섹션-->
-        <section>
+        <section style="border: 1px solid black;">
             <nav>
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist" >
                     <li class="nav-item" role="presentation">
@@ -120,10 +125,19 @@
                     </div>
                 </div>
             </nav>
-            <div>
-                <p>
-                    <a th:href="@{'/user/{userId}/modify.do'(userId=${user.userId})}">수정페이지</a>
-                </p>
+            <div style="border: 1px solid red;">
+                <p>유저 링크 테스트</p>
+                <span th:each="list : ${list}">
+                    <a th:href="@{'/user/{userId}/detail.do'(userId=${list.userId})}" th:text="${list.userId}"></a>
+                </span>
+<!--                <p th:text="${session.loginUser}"></p>-->
+<!--                <p th:text="${session.loginUser.userId}"></p>-->
+<!--                <p th:text="${user.userId}"></p>-->
+                <th:block th:if="${session.loginUser.userId.equals(user.userId)}">
+                    <p>
+                        <a th:href="@{'/user/{userId}/modify.do'(userId=${user.userId})}">수정페이지</a>
+                    </p>
+                </th:block>
             </div>
         </section>
 
