--- a/src/main/resources/templates/user/detail/recommandList.html
+++ b/src/main/resources/templates/user/detail/recommandList.html
@@ -1,5 +1,14 @@
 <div>
   <h1>테스트 4번</h1>
   <p>추천가게 리스트</p>
-  <p th:text="${user}"></p>
+  <p>필요 카드 내부 항목</p>
+  <span>1.가게 이미지</span> <span>2.가게 이름</span> <span>3.평점(?)</span>
+  <span>4.한출평</span>
+  <div th:each="recommend : ${recommend}">
+    <span th:text="${recommend}"></span>
+    <button href="#" th:if="${session.loginUser.userId.equals(user.userId)}">DELETE</button>
+  </div>
+
+
+
 </div>
