--- a/src/main/resources/templates/user/detail/reviewList.html
+++ b/src/main/resources/templates/user/detail/reviewList.html
@@ -1,5 +1,12 @@
 <div>
     <h1>테스트 3번</h1>
     <p>리뷰작성 리스트</p>
-    <p th:text="${reviewed}"></p>
+    <p>필요 카트 내부 항목 리스트</p>
+    <span>1.가게 프사 이미지</span> <span>2.가게 이름</span> <span>3.가게 뱃지</span>
+    <span>4.가게 평점</span> <span>5.좋아요</span> <span>6.리뷰 이미지</span>
+    <span>7. 리뷰 코멘트</span> <span>8.메뉴 한줄명</span>
+    <div th:each="reviewed : ${reviewed}">
+        <p th:text="${reviewed}"></p>
+    </div>
+
 </div>
