챱딜 페이지

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,5 +17,8 @@
     <a th:href="@{'/user/user03/detail.do'}">유저 3</a>
     참고 : th:href="@{'/user/{uId}/detail.do'(uId=${session.loginUser.userId})}"
   </div>
+  <div>
+    <a th:href="@{'/chapdeal/list.do'}">챱딜</a>
+  </div>
 </div>
 </html>
