--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -5,41 +5,38 @@
     background-color:#31363b !important; ;
   }
 </style>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-sm">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <img src="/public/img/logo.png" alt="" width="120px" height="40px" style="margin-top: 10px">
+    <img src="/public/img/logo.png" alt="" width="160px" height="55px" style="margin-top: 10px; margin-left: 20px">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse" id="collapsibleNavbar" style="margin-left: 5px; margin-top: 10px">
+      <ul class="navbar-nav ">
         <li class="nav-item">
-          <a class="nav-link" href="/board/list.do">게시판</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/board/register.do">
-            게시글 등록
-            <i class="bi bi-plus-square"></i>
+          <a class="nav-link" href="/board/list.do" style="font-size: 25px;margin-top: 10px">
+            <strong>Chap List</strong>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="offcanvas" href="#offcanvasSearch" role="button" aria-controls="offcanvasExample">
-            해시태그 검색
-            <i class="bi bi-search"></i>
+          <a class="nav-link" href="/board/register.do" style="font-size: 25px;margin-top: 10px">
+            <strong>Chap Story</strong>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/board/register.do" style="font-size: 25px; margin-top: 10px">
+            <strong>Chap Deal</strong>
           </a>
         </li>
       </ul>
-
+    </div>
       <div class="d-flex">
         <i class="nav-link" href="/user/login.do">
-          <!--로그인 아이디/회원가입 아이디-->
-          <a class="bi bi-person" href="/user/login.do" style="font-size: 30px; margin-right: 10px;"></a>
+            <!--로그인 아이디/회원가입 아이디-->
+            <a class="bi bi-person" href="/user/login.do" style="font-size: 27px; color: #757575; margin-right: 15px"></a>
         </i>
         <i class="nav-link">
           <!--로그인 아이디/회원가입 아이디-->
-          <a class="bi bi-person-add" href="/user/signup.do" style="font-size: 30px; margin-right: 5px"></a>
+          <a class="bi bi-person-add" href="/user/signup.do" style="font-size: 27px; color: #757575; margin-right: 15px"></a>
         </i>
           <th:block th:if="${session.loginUser!=null}">
             <li class="breadcrumb-item">
@@ -57,22 +54,7 @@
   </div>
 </nav>
 
-<div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasSearch" aria-labelledby="offcanvasExampleLabel">
-  <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasExampleLabel">해시태그 검색</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <div class="input-group">
-      <label class="input-group-text text-light bg-dark">
-        <i class="bi bi-hash"></i>
-      </label>
-      <input type="text" id="searchTagInput" class="form-control" placeholder="해시태그">
-    </div>
-    <hr>
-    <div id="tagListCont" class="list-group"></div>
-  </div>
-</div>
+
 <script>
   function tagListComponent (tagObj) {
     return `
@@ -90,20 +72,7 @@
         </div>
       </a>`;
   }
-  const searchTagInput=document.getElementById("searchTagInput");
-  const tagListCont = document.getElementById("tagListCont");
-  searchTagInput.addEventListener("input",async (e) => {
-    let tag=searchTagInput.value;
-    if (tag.length>0) {
-      const tags=await searchTags(tag);
-      if (tags) {
-        tagListCont.innerHTML="";
-        for (const tagObj of tags) {
-          tagListCont.insertAdjacentHTML("beforeend",tagListComponent(tagObj));
-        }
-      }
-    }
-  });
+
   async function searchTags (tag) {
     let url=`/hashtag/${tag}/search.do`;
     const resp=await fetch(url);
