가게 타입 추가및 변경함

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -132,17 +132,17 @@
 
             <div class="d-flex justify-content-center flex-column" style="height: 150px; width: 130px">
                 <div class="rounded-circle border border-dark border-2" style="height: 130px; width: 130px"></div>
-                <p class="text-center" style="height: 10px">중국집</p>
+                <p class="text-center" style="height: 10px">중식</p>
             </div>
 
             <div class="d-flex justify-content-center flex-column" style="height: 150px; width: 130px">
                 <div class="rounded-circle border border-dark border-2" style="height: 130px; width: 130px"></div>
-                <p class="text-center" style="height: 10px">찜</p>
+                <p class="text-center" style="height: 10px">아시안</p>
             </div>
 
-            <div class="d-flex justify-content-center flex-column" style="height: 140px; width: 130px">
+            <div class="d-flex justify-content-center flex-column" style="height: 150px; width: 130px">
                 <div class="rounded-circle border border-dark border-2" style="height: 130px; width: 130px"></div>
-                <p class="text-center" style="height: 10px">해물</p>
+                <p class="text-center" style="height: 10px">패스트푸드</p>
             </div>
         </div>
     </div>
