--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,28 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
-<div layout:fragment="content">
+<div layout:fragment="content" class="position-relative">
+        <button class="btn btn-warning rounded-circle mx-5 position-sticky top-50 start-100 translate-middle-y" style="height: 80px; width: 80px" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">웨이팅</button>
+
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                ...
+            </div>
+        </div>
+
+    <div id="map" style="width:100%;height:400px;"></div>
+    <script>
+        var mapOptions = {
+            center: new naver.maps.LatLng(37.3595704, 127.105399),
+            zoom: 14
+        };
+
+        var map = new naver.maps.Map('map', mapOptions);
+    </script>
     <div class="mt-lg-5">
         <div id="carouselExampleFade" class="carousel slide carousel-fade w-75 mx-auto" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -332,6 +353,9 @@
             </div>
         </div>
     </div>
+
+
+
     <footer class="w-75 mx-auto mt-5">
         <div class="d-flex justify-content-between">
             <div>
@@ -350,5 +374,15 @@
             <h5 class="ms-5">2.고객센터</h5>
         </div>
     </footer>
+    <button type="button" class="btn btn-outline-warning" style="position: fixed; bottom: 20px; right: 130px; width: 100px;" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="채팅내역?">
+        채  팅
+        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+    60
+    <span class="visually-hidden">unread messages</span>
+  </span>
+    </button>
+
+
+
 </div>
 </html>
