--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/board/register.do" style="font-size: 25px; margin-top: 10px">
+          <a class="nav-link" href="/chapdeal/list.do" style="font-size: 25px; margin-top: 10px">
             <strong>Chap Deal</strong>
           </a>
         </li>
