--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -6,7 +6,7 @@
 <head>
     <title>로그인</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+<!--    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">-->
 </head>
 <div layout:fragment="content">
     <form class="mx-auto" action="/user/login.do" method="post" style="width: 450px;">
@@ -36,7 +36,7 @@
             </div>
         </div>
             <div class="form-outline row" >
-                <button type="button" class="button_login btn btn-lg float-end">로그인</button>
+                <button class="button_login btn btn-lg float-end">로그인</button>
             </div>
         <p class="text-end container-sm login_list d-flex justify-content-center">
             <button style="opacity: 30%; font-size: 18px" class="list">
@@ -49,9 +49,9 @@
                 회원가입
             </button>
         </p>
+    </form>
 
-        </form>
-    </div>
+</div>
 </html>
 
 <style>
