사람은 서울로 말은 제주로

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="/webjars/bootstrap-icons/1.10.3/font/bootstrap-icons.css">
   <script src="/webjars/bootstrap/5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4ikx943fco"></script>
-  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=YOUR_CLIENT_ID&submodules=geocoder"></script>
+  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=4ikx943fco&submodules=geocoder"></script>
 </head>
 <!-- storelist-main 스타일은 store/list.html에서 사용중이니 지우지말것 -->
 <body class="storelist-main" style="background: #FFFAED;">
