--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -28,7 +28,7 @@
             <div class="fixed-bottom box_check container-sm">
                 <!-- Checkbox -->
                 <div class="form-check mb-0">
-                    <input class="form-check-input me-2" type="checkbox" value="1" id="autoLogin" />
+                    <input class="form-check-input me-2" type="checkbox" name="autoLogin" value="1" id="autoLogin" />
                     <label class="form-check-label" for="autoLogin">
                         로그인 상태 유지
                     </label>
