--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <title>유저 상세 페이지</title>
     <link rel="stylesheet" href="/csstest/userDetailCss.css">
+    <script src="https://kit.fontawesome.com/ff32a16db2.js" crossorigin="anonymous"></script>
 </head>
 
 <div layout:fragment="content" >
@@ -34,12 +35,9 @@
 <!--                버튼 변환-->
                 <th:block th:if="${session.loginUser.userId.equals(user.userId)}">
                     <a class="profilebutton" th:href="@{'/user/{userId}/modify.do'(userId=${user.userId})}">수정페이지</a>
-<!--                    <br>-->
                 </th:block>
                 <th:block th:if="${session.loginUser.userId!=user.userId}">
-                    <p class="profilebutton">
-                        <a class="profilebutton">팔로우</a>
-                    </p>
+                    <a class="profilebutton">팔로우</a>
                 </th:block>
             </div>
 
@@ -50,7 +48,7 @@
                 <span>팔로잉</span>
             </div>
 
-            <p th:text="${user.introduce}"></p>
+            <p th:text="${user.introduce}+${user.faceUrl}+${user.youtubeUrl}+${user.instaUrl}"></p>
 
             <div class="user-badgebox">
                 뱃지
@@ -58,24 +56,54 @@
 
             <ul style="border : 1px solid black;">
                 <li>
-                    <a href="">페이스븍</a>
-                    <a href=""></a>
+                    <span th:if="${user.faceUrl==null}">
+                        <i class="fa-brands fa-facebook"></i>
+                    </span>
+                    <span th:if="${user.faceUrl!=null}">
+                        <a th:href="${user.faceUrl}">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </span>
                 </li>
                 <li>
-                    <a href="">인스타</a>
-                    <a href=""></a>
+                    <span th:if="${user.instaUrl==null}">
+                        <i class="fa-brands fa-instagram"></i>
+                    </span>
+                    <span th:if="${user.instaUrl!=null}">
+                        <a th:href="${user.instaUrl}">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </span>
                 </li>
                 <li>
-                    <a href="">유튜브</a>
-                    <a href=""></a>
+                    <span th:if="${user.youtubeUrl==null}">
+                        <i class="fa-brands fa-youtube"></i>
+                    </span>
+                    <span th:if="${user.youtubeUrl!=null}">
+                        <a th:href="${user.youtubeUrl}">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                    </span>
                 </li>
                 <li>
-                    <a href="">공유</a>
-                    <a href=""></a>
+                    <span th:if="${user.faceUrl==null}">
+                        <i class="fa-solid fa-book"></i>
+                    </span>
+                    <span th:if="${user.faceUrl!=null}">
+                        <a th:href="${user.faceUrl}">
+                            <i class="fa-solid fa-book"></i>
+                        </a>
+                    </span>
                 </li>
                 <li>
-                    <a href="">찹스토리</a>
-                    <a href=""></a>
+                    <span th:if="${user.faceUrl==null}">
+                        <i class="fa-solid fa-share"></i>
+                    </span>
+                    <span th:if="${user.faceUrl!=null}">
+                        <a th:href="${user.faceUrl}">
+                            <i class="fa-solid fa-share"></i>
+                        </a>
+                    </span>
                 </li>
             </ul>
 
@@ -89,7 +117,7 @@
                         <button class="nav-link active" id="waitingListTab" data-bs-toggle="pill"
                                 data-bs-target="#waitingList" type="button"
                                 role="tab" aria-controls="waitingList" aria-selected="true">
-                            버튼1
+                            웨이팅했던 가게 목록
                         </button>
                     </li>
                     <li class="nav-item" role="presentation">
@@ -97,7 +125,7 @@
                                 class="nav-link" id="jjimListTab" data-bs-toggle="pill"
                                 data-bs-target="#jjimList" type="button" role="tab"
                                 aria-controls="jjimList" aria-selected="false">
-                            버튼2
+                            찜한 가게 목록
                         </button>
                     </li>
                     <li class="nav-item" role="presentation">
@@ -105,7 +133,7 @@
                                 class="nav-link" id="reviewListTab" data-bs-toggle="pill"
                                 data-bs-target="#reviewList" type="button" role="tab"
                                 aria-controls="reviewList" aria-selected="false">
-                            버트3
+                            작성한 리뷰
                         </button>
                     </li>
                     <li class="nav-item" role="presentation">
@@ -113,7 +141,7 @@
                                 class="nav-link" id="recommandListTab" data-bs-toggle="pill"
                                 data-bs-target="#recommandList" type="button" role="tab"
                                 aria-controls="recommandList" aria-selected="false">
-                            버튼4
+                            추천 가게
                         </button>
                     </li>
                 </ul>
@@ -142,9 +170,7 @@
                 <span th:each="list : ${list}">
                     <a th:href="@{'/user/{userId}/detail.do'(userId=${list.userId})}" th:text="${list.userId}"></a>
                 </span>
-<!--                <p th:text="${session.loginUser}"></p>-->
-<!--                <p th:text="${session.loginUser.userId}"></p>-->
-<!--                <p th:text="${user.userId}"></p>-->
+
                 <th:block th:if="${session.loginUser.userId.equals(user.userId)}">
                     <p>
                         <a th:href="@{'/user/{userId}/modify.do'(userId=${user.userId})}">수정페이지</a>
