--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -106,62 +106,58 @@
                     </span>
                 </li>
             </ul>
-
         </div>
         </section>
 
         <section style="border: 1px solid black;">
             <nav>
-                <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist" >
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="waitingListTab" data-bs-toggle="pill"
-                                data-bs-target="#waitingList" type="button"
-                                role="tab" aria-controls="waitingList" aria-selected="true">
-                            웨이팅했던 가게 목록
-                        </button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button
-                                class="nav-link" id="jjimListTab" data-bs-toggle="pill"
-                                data-bs-target="#jjimList" type="button" role="tab"
-                                aria-controls="jjimList" aria-selected="false">
-                            찜한 가게 목록
-                        </button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button
-                                class="nav-link" id="reviewListTab" data-bs-toggle="pill"
-                                data-bs-target="#reviewList" type="button" role="tab"
-                                aria-controls="reviewList" aria-selected="false">
-                            작성한 리뷰
-                        </button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button
-                                class="nav-link" id="recommandListTab" data-bs-toggle="pill"
-                                data-bs-target="#recommandList" type="button" role="tab"
-                                aria-controls="recommandList" aria-selected="false">
-                            추천 가게
-                        </button>
-                    </li>
-                </ul>
+                <div style="display: flex; justify-content: center;">
+                    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist" style="border: 1px solid black;">
+                        <li class="nav-item listbutton" role="presentation" >
+                            <button class="nav-link active" id="waitingListTab" data-bs-toggle="pill"
+                                    data-bs-target="#waitingList" type="button"
+                                    role="tab" aria-controls="waitingList" aria-selected="true">
+                                웨이팅했던 가게 목록
+                            </button>
+                        </li>
+                        <li class="nav-item listbutton" role="presentation">
+                            <button
+                                    class="nav-link" id="jjimListTab" data-bs-toggle="pill"
+                                    data-bs-target="#jjimList" type="button" role="tab"
+                                    aria-controls="jjimList" aria-selected="false">
+                                찜한 가게 목록
+                            </button>
+                        </li>
+                        <li class="nav-item listbutton" role="presentation">
+                            <button
+                                    class="nav-link" id="reviewListTab" data-bs-toggle="pill"
+                                    data-bs-target="#reviewList" type="button" role="tab"
+                                    aria-controls="reviewList" aria-selected="false">
+                                작성한 리뷰
+                            </button>
+                        </li>
+                        <li class="nav-item listbutton" role="presentation">
+                            <button
+                                    class="nav-link" id="recommandListTab" data-bs-toggle="pill"
+                                    data-bs-target="#recommandList" type="button" role="tab"
+                                    aria-controls="recommandList" aria-selected="false">
+                                추천 가게
+                            </button>
+                        </li>
+                    </ul>
+                </div>
                 <div class="tab-content" id="pills-tabContent">
                     <div th:include="/user/detail/waitingList" class="tab-pane fade show active" id="waitingList" role="tabpanel"
                             aria-labelledby="waitingListTab" tabindex="0">
                     </div>
                     <div th:include="/user/detail/jjimList" class="tab-pane fade" id="jjimList" role="tabpanel"
                             aria-labelledby="jjimListTab" tabindex="0">
-
                     </div>
                     <div th:include="/user/detail/reviewList" class="tab-pane fade" id="reviewList" role="tabpanel"
                             aria-labelledby="reviewListTab" tabindex="0">
-                        <p>ajax 구현 부분?</p>
-                        <p th:text="${user}"></p>
                     </div>
                     <div th:include="/user/detail/recommandList" class="tab-pane fade" id="recommandList" role="tabpanel"
                          aria-labelledby="recommandListTab" tabindex="0">
-                        <p>ajax 구현 부분?</p>
-                        <p th:text="${user}"></p>
                     </div>
                 </div>
             </nav>
@@ -178,11 +174,9 @@
                 </th:block>
             </div>
         </section>
-
-
     </div>
-
-
-
 </div>
 </html>
+<script>
+
+</script>
