--- a/src/main/resources/templates/user/detail/jjimList.html
+++ b/src/main/resources/templates/user/detail/jjimList.html
@@ -1,13 +1,5 @@
 <div>
-    <h1>테스트 2번</h1>
-    <p>유저 찜목록 리스트</p>
-    <p>필요 테이블 리스트</p>
-    <span>1.번호</span> <span>2.가게 이름</span>
-    <span>3.정렬</span> <span>4.위치</span>
-    <div th:each="jjim : ${jjim}">
-        <span th:text="${jjim}" th:if="${jjim.jjStatus.equals('공개')}"></span>
-<!--        <button href="#" th:if="${session.loginUser.userId.equals(user.userId)}">DELETE</button>-->
-    </div>
+
     <table class="table table-hover">
         <thead>
         <tr>
@@ -23,9 +15,11 @@
         </thead>
         <tbody>
         <tr th:each="jjim : ${jjim}">
-            <td th:text="${jjim.listNum}" th:if="${jjim.jjStatus.equals('공개')}"></td>
-            <td th:text="${jjim.storeName}" th:if="${jjim.jjStatus.equals('공개')}"></td>
-            <td th:text="${jjim.address}" colspan="2" th:if="${jjim.jjStatus.equals('공개')}"></td>
+            <th:block th:if="${jjim.jjStatus.equals('공개')}">
+                <td th:text="${jjim.listNum}"></td>
+                <td th:text="${jjim.storeName}"></td>
+                <td th:text="${jjim.address}"></td>
+            </th:block>
         </tr>
         </tbody>
     </table>
