--- a/src/main/resources/templates/user/detail/recommandList.html
+++ b/src/main/resources/templates/user/detail/recommandList.html
@@ -4,10 +4,10 @@
   <p>필요 카드 내부 항목</p>
   <span>1.가게 이미지</span> <span>2.가게 이름</span> <span>3.평점(?)</span>
   <span>4.한출평</span>
-  <div th:each="recommend : ${recommend}">
-    <span th:text="${recommend}"></span>
-    <button href="#" th:if="${session.loginUser.userId.equals(user.userId)}">DELETE</button>
-  </div>
+<!--  <div th:each="recommend : ${recommend}">-->
+<!--    <span th:text="${recommend}"></span>-->
+<!--    <button href="#" th:if="${session.loginUser.userId.equals(user.userId)}">DELETE</button>-->
+<!--  </div>-->
 
   <div style="display: flex;">
     <div th:each="recommend2 : ${recommend}" class="card" style="width: 18rem">
@@ -26,8 +26,4 @@
       </div>
     </div>
   </div>
-
-
-
-
 </div>
