가게리스트 구현중

--- a/src/main/resources/templates/store/list.html
+++ b/src/main/resources/templates/store/list.html
@@ -23,10 +23,11 @@
             <div style="display: flex; flex: 4;">
                 <!-- 필터 부분 -->
                 <div class="d-flex flex-column justify-content-center align-items-center" style="flex: 2;">
-                    <h5>
-                        필터
-                        <i class="bi bi-funnel-fill"></i>
-                    </h5>
+                    <div class="d-flex flex-row">
+                        <h5 class="ms-1 me-1">필터</h5>
+                        <h5 class="ms-1 me-1"><i class="bi bi-funnel-fill"></i></h5>
+                        <button class="btn btn-outline-secondary btn-sm ms-1 me-1" style="height: 30px;">검색</button>
+                    </div>
                     <!-- 메뉴 종류 -->
                     <div class="mb-2 d-flex" style="width: 90%;">
                         <div class="dropdown" style="width: 100%;">
